--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Our facilities and services are comparable to those found in top hotel venues, m
             </div>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Gaya & Bodhgaya: An Exploration</h3>
-                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE__%E0%A4%86%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AE%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%B8%E0%A5%87_%E0%A4%86%E0%A4%A7%E0%A5%81%E0%A4%A8%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%A4%E0%A4%95_-_%E0%A4%8F%E0%A4%95_%E0%A4%AC%E0%A4%B2%E0%A4%A4%E0%A5%87_%E0%A4%A4%E0%A5%80%E0%A4%B0%E0%A5%8D%E0%A4%A5%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%B2_%E0%A4%95%E0%A5%80_%E0%A4%AA%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A4%BE.m4a" class="w-full"></audio>
+                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%97%E0%A4%AY%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE__%E0%A4%86%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AE%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%B8%E0%A5%87_%E0%A4%86%E0%A4%A7%E0%A5%81%E0%A4%A8%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%A4%E0%A4%95_-_%E0%A4%8F%E0%A4%95_%E0%A4%AC%E0%A4%B2%E0%A4%A4%E0%A5%87_%E0%A4%A4%E0%A5%80%E0%A4%B0%E0%A5%8D%E0%A4%A5%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%B2_%E0%A4%95%E0%A5%80_%E0%A4%AA%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A4%BE.m4a" class="w-full"></audio>
             </div>
             <p class="text-md text-gray-600 mt-6">
                 Find us 
@@ -1091,6 +1091,66 @@ text-center
                 <a href="https://vishalhospitalrajkot.github.io/Bihar/" target="_blank" class="btn bg-teal-600 hover:bg-teal-700">
                     Explore Bihar
                 </a>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2 class="section-title">गया जी: महत्व, इतिहास और संस्कृति</h2>
+            <div class="space-y-6 text-gray-700 leading-relaxed">
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी का क्या महत्व है और यह कहाँ स्थित है?</p>
+                    <p>उत्तर: गया, जिसे 18 मई, 2025 को आधिकारिक तौर पर 'गया जी' का नाम दिया गया, भारत के बिहार राज्य में स्थित एक शहर है। यह आध्यात्मिक, ऐतिहासिक और सांस्कृतिक रूप से अत्यधिक महत्वपूर्ण है। यह दक्षिण-मध्य बिहार में फल्गु नदी के किनारे स्थित है, जो गंगा के मैदान और छोटा नागपुर पठार के संगम के पास है। गया जी चट्टानी पहाड़ियों से घिरा हुआ है और पौराणिक कथाओं के अनुसार, शहर का नाम राक्षस गयासुर के नाम पर पड़ा है, जिसका पवित्र शरीर भगवान विष्णु द्वारा वश में किए जाने के बाद इन पहाड़ियों (जैसे मंगला-गौरी और ब्रह्मयोनि) में बदल गया था। यह हिंदू, बौद्ध और जैन धर्मों के लिए एक महत्वपूर्ण तीर्थ स्थल है।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी के प्रमुख ऐतिहासिक चरण क्या हैं?</p>
+                    <p>उत्तर: गया जी का इतिहास बहुत प्राचीन है, जिसका उल्लेख "गयापुरी" के रूप में रामायण और महाभारत जैसे महाकाव्यों में मिलता है। यह ऋग्वेद के किकट साम्राज्य से जुड़ा है। इसने मौर्य (321-187 ईसा पूर्व), गुप्त (चौथी-पांचवीं शताब्दी ईस्वी) और पाल (आठवीं-बारहवीं शताब्दी) साम्राज्यों के तहत महत्वपूर्ण विकास देखा। सम्राट अशोक ने तीसरी शताब्दी ईसा पूर्व में बोधगया में पहला मंदिर बनवाया था, और पाल शासन के दौरान महाबोधि मंदिर की मुख्य संरचनाओं का निर्माण किया गया था। मध्यकालीन युग में, यह दिल्ली सल्तनत और मुगल साम्राज्य के अधीन आया। 1787 में अहिल्याबाई होल्कर द्वारा विष्णुपद मंदिर का पुनर्निर्माण किया गया। ब्रिटिश शासन के तहत, गया जिला 1865 में बनाया गया था। 20वीं शताब्दी में, गया जी भारतीय स्वतंत्रता आंदोलन में सक्रिय था, जिसने 1922 में 37वें कांग्रेस सत्र की मेजबानी की थी, जिसमें महात्मा गांधी, जवाहरलाल नेहरू और सरदार पटेल जैसे नेताओं ने भाग लिया था। बोधगया में महाबोधि मंदिर परिसर 2002 से यूनेस्को विश्व धरोहर स्थल है, और शहर को शहरी विकास के लिए भारत की HRIDAY योजना के तहत एक विरासत शहर के रूप में मान्यता दी गई है।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी में कौन से प्रमुख हिंदू तीर्थ स्थल और अनुष्ठान हैं?</p>
+                    <p>उत्तर: गया जी हिंदुओं के लिए एक प्रमुख तीर्थ स्थल है, विशेष रूप से पितृपक्ष मेला के दौरान। यहाँ के मुख्य स्थल हैं:<br>
+                    <strong>विष्णुपद मंदिर:</strong> 18वीं शताब्दी का यह मंदिर फल्गु नदी पर भगवान विष्णु के पदचिह्न (धर्मशिला) को चिह्नित करता है। यह 40 सेंटीमीटर लंबे पदचिह्न को दर्शाता है और पिण्डदान अनुष्ठान का केंद्र है, जो पूर्वजों को श्रद्धांजलि देने के लिए किया जाता है ताकि आत्माओं को मोक्ष मिल सके।<br>
+                    <strong>पिण्डदान और फल्गु नदी:</strong> यह गया जी में केंद्रीय हिंदू अनुष्ठान है, जहाँ भक्त फल्गु नदी के तट पर पूर्वजों को पिंड (पुष्पांजलि) अर्पित करते हैं, जिसे "पितृ ऋण" चुकाने के लिए माना जाता है। किंवदंती है कि राम, सीता और लक्ष्मण ने दशरथ के लिए यहाँ पिण्डदान किया था।<br>
+                    <strong>रामशिला हिल और अक्षयवट:</strong> रामशिला हिल एक पवित्र पहाड़ी है जहाँ माना जाता है कि भगवान राम ने पैतृक अनुष्ठान किए थे। पास में अक्षयवट, एक अमर बरगद का पेड़ है, जहाँ पिण्डदान भी किया जाता है, जो शाश्वत आशीर्वाद सुनिश्चित करता है।<br>
+                    <strong>मंगला गौरी मंदिर:</strong> यह एक पहाड़ी पर स्थित शक्ति पीठ है जो देवी सती (मंगला गौरी का अवतार) को समर्पित है, जो 15वीं शताब्दी का एक महत्वपूर्ण मंदिर है।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी का बौद्ध धर्म से क्या संबंध है?</p>
+                    <p>उत्तर: गया जी का बौद्ध धर्म में अत्यधिक महत्व है, विशेष रूप से बोधगया क्षेत्र में, जो शहर से लगभग 16 किमी दूर है।<br>
+                    <strong>महाबोधि मंदिर परिसर:</strong> यह 26 जून, 2002 से यूनेस्को विश्व धरोहर स्थल है। यह वह स्थान है जहाँ सिद्धार्थ गौतम ने ज्ञान प्राप्त किया था। 5वीं-6वीं शताब्दी ईस्वी का यह मंदिर 55 मीटर ऊँचे पिरामिड के आकार के टॉवर और एक सोने की बुद्ध प्रतिमा को प्रदर्शित करता है। यह अशोक के तीसरी शताब्दी ईसा पूर्व के निर्माण से जुड़ा है और ईंट से बना सबसे प्रारंभिक बौद्ध मंदिर है जो अभी भी खड़ा है।<br>
+                    <strong>बोधि वृक्ष:</strong> यह उस मूल बरगद के पेड़ का सीधा वंशज है जिसके नीचे बुद्ध ने ध्यान किया और ज्ञान प्राप्त किया। यह महाबोधि मंदिर के पीछे स्थित है और ध्यान और चढ़ावे के लिए एक पवित्र स्थान है।<br>
+                    <strong>डुंगेश्वरी गुफाएँ (महाकाल गुफाएँ):</strong> ये गुफाएँ बोधगया के बाहर स्थित हैं, जहाँ बुद्ध ने ज्ञान प्राप्त करने से पहले छह साल तक अत्यधिक तपस्या का अभ्यास किया था।<br>
+                    <strong>महान बुद्ध प्रतिमा:</strong> 19.5 मीटर (61 फुट) की यह विशाल बुद्ध प्रतिमा (1982-89) भी एक लोकप्रिय तीर्थस्थल है।<br>
+                    <strong>बराबर गुफाएँ:</strong> गया जी से लगभग 24 किमी उत्तर में स्थित ये गुफाएँ भारत की सबसे पुरानी चट्टानों को काटकर बनाई गई गुफाएँ (तीसरी शताब्दी ईसा पूर्व) हैं, जिनमें अशोक के शिलालेख हैं और माना जाता है कि इनका उपयोग आजीविका तपस्वियों द्वारा किया गया था।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी की सांस्कृतिक विरासत और त्योहार क्या हैं?</p>
+                    <p>उत्तर: गया जी की संस्कृति आध्यात्मिकता, कला और पाक परंपराओं का एक समृद्ध मिश्रण है।<br>
+                    <strong>पितृपक्ष मेला:</strong> सितंबर-अक्टूबर में 16 दिनों का यह हिंदू त्योहार पूर्वजों की पूजा के लिए लाखों भक्तों को आकर्षित करता है, जो फल्गु के किनारे पिण्डदान अनुष्ठान करते हैं।<br>
+                    <strong>वेसाक (बुद्ध पूर्णिमा):</strong> अप्रैल-मई में मनाया जाने वाला यह बौद्धों का सबसे महत्वपूर्ण त्योहार है, जो बुद्ध के जन्म, ज्ञान और महापरिनिर्वाण का प्रतीक है।<br>
+                    <strong>छठ पूजा:</strong> यह सूर्य देव को समर्पित एक प्राचीन हिंदू त्योहार है, जो विशेष रूप से बिहार में उपवास और उगते व डूबते सूर्य को अर्घ्य देने के साथ मनाया जाता है।<br>
+                    <strong>पाक विरासत:</strong> यहाँ के व्यंजनों में बिहारी और तिब्बती प्रभाव हैं। प्रसिद्ध व्यंजनों में 'लिट्टी चोखा', 'तिलकुट' (तिल और गुड़ से बनी मिठाई), 'मोमोस' (तिब्बती पकौड़ी), 'खाजा' (परतदार पेस्ट्री) और 'सत्तू पराठा' शामिल हैं।<br>
+                    <strong>अद्वितीय मान्यताएँ:</strong> एक अनोखी मान्यता है कि फल्गु नदी सीता के शाप के कारण अधिकतर भूमिगत बहती है, और इसका पानी केवल खुदाई करने पर ही सतह पर आता है। यह इसके अनुष्ठानों के लिए नदी की पवित्रता को बढ़ाता है।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी में कौन सी भाषाएँ बोली जाती हैं और यहाँ की धार्मिक जनसांख्यिकी क्या है?</p>
+                    <p>उत्तर: गया जी की आधिकारिक भाषाएँ हिंदी और अंग्रेजी हैं। स्थानीय रूप से, मगही व्यापक रूप से बोली जाती है, जो जिले की लगभग 41.4% आबादी की प्रमुख मातृभाषा है। उर्दू और हिंदी की अन्य बोलियाँ भी मौजूद हैं, जो क्षेत्र की भाषाई विविधता को दर्शाती हैं।<br>
+                    2011 की जनगणना के अनुसार, धार्मिक संरचना लगभग 79.43% हिंदू धर्म, 19.65% इस्लाम, 0.26% ईसाई धर्म, 0.24% जैन धर्म और 1.42% अन्य है, जिसमें 0.09% सिख और 0.02% बौद्ध शामिल हैं। गया जी धार्मिक सह-अस्तित्व का एक उदाहरण है, जिसमें प्रमुख बौद्ध त्योहार, प्राचीन हिंदू अनुष्ठान और ऐतिहासिक जामा मस्जिद में महत्वपूर्ण इस्लामी कार्यक्रम आयोजित होते हैं। यह जैन धर्म में भी पवित्रता रखता है।</p>
+                </div>
+                <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी की अर्थव्यवस्था और शिक्षा प्रणाली क्या है?</p>
+                    <p>उत्तर: गया जी बिहार का पटना के बाद दूसरा सबसे बड़ा आर्थिक योगदानकर्ता है।<br>
+                    <strong>आर्थिक गतिविधियाँ:</strong> जिले की अर्थव्यवस्था में कृषि का प्रभुत्व है (चावल, गेहूँ, मक्का, दालें, आलू), सिंचाई द्वारा समर्थित। पशुधन भी महत्वपूर्ण है। शहर में, अगरबत्ती, तिलकुट, लाई, हथकरघा और बिजली करघा वस्त्र, और पत्थर की नक्काशी जैसे छोटे पैमाने के उद्योग फलते-फूलते हैं। धार्मिक पर्यटन (तीर्थयात्री आवास, दुकानें, परिवहन) एक प्रमुख सेवा क्षेत्र है।<br>
+                    <strong>शिक्षा:</strong> गया जी एक शैक्षिक केंद्र है। इसमें दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, भारतीय प्रबंधन संस्थान बोधगया, अनुग्रह नारायण मगध मेडिकल कॉलेज और अस्पताल, अधिकारी प्रशिक्षण अकादमी, गया कॉलेज ऑफ इंजीनियरिंग और कई अन्य कॉलेज शामिल हैं। शहर की साक्षरता दर (7 वर्ष से अधिक आयु) 2011 तक लगभग 85.7% है, जो जिले के औसत से काफी ऊपर है।<br>
+                    <strong>शासन:</strong> गया जी, गया जिले और मगध मंडल का प्रशासनिक मुख्यालय है, जिसका प्रशासन गया नगर निगम द्वारा संभाला जाता है।</p>
+                </div>
+                 <div>
+                    <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी कैसे पहुँचा जा सकता है और यहाँ जाने का सबसे अच्छा समय कौन सा है?</p>
+                    <p>उत्तर: गया जी हवाई, रेल और सड़क मार्ग से अच्छी तरह जुड़ा हुआ है।<br>
+                    <strong>हवाई मार्ग:</strong> गया अंतर्राष्ट्रीय हवाई अड्डा (शहर के केंद्र से 8 किमी) में मौसमी अंतरराष्ट्रीय उड़ानें (मुख्य रूप से बौद्ध तीर्थयात्रियों के लिए) और कोलकाता और दिल्ली के लिए नियमित घरेलू उड़ानें हैं।<br>
+                    <strong>रेल मार्ग:</strong> गया जंक्शन रेलवे स्टेशन (शहर के केंद्र से 4 किमी) नई दिल्ली-हावड़ा ग्रैंड कॉर्ड मार्ग पर एक प्रमुख नोड है।<br>
+                    <strong>सड़क मार्ग:</strong> राष्ट्रीय राजमार्ग NH-19, NH-82 और NH-83 इसे पटना (116 किमी दक्षिण), कोलकाता, रांची आदि से जोड़ते हैं। बिहार राज्य सड़क परिवहन निगम (BSRTC) नियमित बसें चलाता है।<br>
+                    <strong>घूमने का सबसे अच्छा समय:</strong> गया जी घूमने का सबसे अच्छा समय अक्टूबर से मार्च के बीच है, जब मौसम सुहावना होता है और त्योहारों के अनुष्ठानों के लिए उपयुक्त होता है। मानसून के बाद (सितंबर के अंत) और सर्दियों के महीनों में भारी भीड़ होती है। गर्मियों (अप्रैल-जून) में बहुत गर्मी (अक्सर 40 डिग्री सेल्सियस से ऊपर) और उमस होती है, और जून-सितंबर तक मानसून की बारिश होती है।</p>
+                </div>
             </div>
         </section>
         
