--- a/index.html
+++ b/index.html
@@ -291,6 +291,13 @@ We look forward to welcoming you!
         </section>
 
         <section class="card">
+            <h2 class="section-title">Project Mind Map</h2>
+            <div class="flex justify-center">
+                <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f8e8e79f3b9f5b3287956e12c4ec436a220ea391/NotebookLM%20Mind%20Map%20(11).png?raw=true" alt="NotebookLM Mind Map" class="rounded-lg shadow-lg">
+            </div>
+        </section>
+
+        <section class="card">
             <h2 class="section-title">बोधगया और गया: समय-रेखा और पात्र</h2>
             <p class="text-lg text-gray-700 leading-relaxed mb-6">
                 बोधगया बिहार, भारत में स्थित एक महत्वपूर्ण धार्मिक और ऐतिहासिक स्थल है, जो बौद्ध धर्म के अनुयायियों के लिए गौतम बुद्ध के जीवन से संबंधित चार मुख्य तीर्थ स्थानों में से अत्यंत महत्वपूर्ण है। गया के पास स्थित यह शहर अपनी समृद्ध आध्यात्मिक विरासत और सांस्कृतिक महत्व के लिए दुनिया भर से तीर्थयात्रियों और पर्यटकों को आकर्षित करता है। इस क्षेत्र का इतिहास मौर्य काल से है, और यह बौद्ध धर्म के उदय और प्रसार से गहराई से जुड़ा हुआ है।
