--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Our facilities and services are comparable to those found in top hotel venues, m
 </p>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Listen to Our Story</h3>
-                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A7%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
+                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%AC%E0%A5%8B%E0%A4%A4%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A7%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
             </div>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Gaya & Bodhgaya: An Exploration</h3>
@@ -291,9 +291,14 @@ We look forward to welcoming you!
         </section>
 
         <section class="card">
-            <h2 class="section-title">Project Mind Map</h2>
-            <div class="flex justify-center">
-                <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f8e8e79f3b9f5b3287956e12c4ec436a220ea391/NotebookLM%20Mind%20Map%20(11).png?raw=true" alt="NotebookLM Mind Map" class="rounded-lg shadow-lg">
+            <h2 class="section-title">Project Mind Maps</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f8e8e79f3b9f5b3287956e12c4ec436a220ea391/NotebookLM%20Mind%20Map%20(11).png?raw=true" alt="NotebookLM Mind Map 1" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/d51260fc203b82b4bf0ed626fec4f7c9ccac0935/NotebookLM%20Mind%20Map%20(2).png?raw=true" alt="NotebookLM Mind Map 2" class="rounded-lg shadow-lg">
+                </div>
             </div>
         </section>
 
@@ -1123,7 +1128,7 @@ text-center
                 <div>
                     <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी का बौद्ध धर्म से क्या संबंध है?</p>
                     <p>उत्तर: गया जी का बौद्ध धर्म में अत्यधिक महत्व है, विशेष रूप से बोधगया क्षेत्र में, जो शहर से लगभग 16 किमी दूर है।<br>
-                    <strong>महाबोधि मंदिर परिसर:</strong> यह 26 जून, 2002 से यूनेस्को विश्व धरोहर स्थल है। यह वह स्थान है जहाँ सिद्धार्थ गौतम ने ज्ञान प्राप्त किया था। 5वीं-6वीं शताब्दी ईस्वी का यह मंदिर 55 मीटर ऊँचे पिरामिड के आकार के टॉवर और एक सोने की बुद्ध प्रतिमा को प्रदर्शित करता है। यह अशोक के तीसरी शताब्दी ईसा पूर्व के निर्माण से जुड़ा है और ईंट से बना सबसे प्रारंभिक बौद्ध मंदिर है जो अभी भी खड़ा है।<br>
+                    <strong>महाबोधि मंदिर परिसर:</strong> यह 26 जून, 2002 से यूनेस्को विश्व धरोहर स्थल है। यह वह स्थान है जहाँ सिद्धार्थ Gautam ने ज्ञान प्राप्त किया था। 5वीं-6वीं शताब्दी ईस्वी का यह मंदिर 55 मीटर ऊँचे पिरामिड के आकार के टॉवर और एक सोने की बुद्ध प्रतिमा को प्रदर्शित करता है। यह अशोक के तीसरी शताब्दी ईसा पूर्व के निर्माण से जुड़ा है और ईंट से बना सबसे प्रारंभिक बौद्ध मंदिर है जो अभी भी खड़ा है।<br>
                     <strong>बोधि वृक्ष:</strong> यह उस मूल बरगद के पेड़ का सीधा वंशज है जिसके नीचे बुद्ध ने ध्यान किया और ज्ञान प्राप्त किया। यह महाबोधि मंदिर के पीछे स्थित है और ध्यान और चढ़ावे के लिए एक पवित्र स्थान है।<br>
                     <strong>डुंगेश्वरी गुफाएँ (महाकाल गुफाएँ):</strong> ये गुफाएँ बोधगया के बाहर स्थित हैं, जहाँ बुद्ध ने ज्ञान प्राप्त करने से पहले छह साल तक अत्यधिक तपस्या का अभ्यास किया था।<br>
                     <strong>महान बुद्ध प्रतिमा:</strong> 19.5 मीटर (61 फुट) की यह विशाल बुद्ध प्रतिमा (1982-89) भी एक लोकप्रिय तीर्थस्थल है।<br>
@@ -1211,12 +1216,12 @@ text-center
                     <h3 class="font-bold text-2xl mt-6 mb-2 text-indigo-800">खंड 3: आध्यात्मिक केंद्र</h3>
                     <p><strong>मुख्य बिंदु:</strong></p>
                     <ul class="list-disc list-inside mb-4 ml-4 space-y-2">
-                        <li><strong>हिंदू तीर्थ स्थल:</strong>विष्णुपद मंदिर: 18वीं शताब्दी का मंदिर, भगवान विष्णु के पदचिह्न (धर्मशिला) को चिह्नित करता है। पिंडदान अनुष्ठान का केंद्र।</li>
+                        <li><strong>हिंदू तीर्थ स्थल:</strong>विष्णुपद मंदिर: 18वीं शताब्दी का मंदिर, भगवान Vishnu के पदचिह्न (धर्मशिला) को चिह्नित करता है। पिंडदान अनुष्ठान का केंद्र।</li>
                         <li><strong>पिंडदान और फल्गु नदी:</strong> पूर्वजों को पिंड अर्पित करने का केंद्रीय अनुष्ठान, "पित्र ऋण" का निवारण करता है। सीता के श्राप के कारण फल्गु नदी का रहस्यमय ढंग से भूमिगत बहना।</li>
                         <li><strong>रामशिला हिल और अक्षयवट:</strong> भगवान राम द्वारा पूर्वजों के अनुष्ठान करने का स्थान माना जाता है; पिंडदान के लिए एक अमर बरगद का पेड़।</li>
                         <li><strong>मंगल गौरी मंदिर और सीता कुंड:</strong> एक पहाड़ी शक्तिपीठ; सीता कुंड दशरथ के लिए सीता द्वारा अनुष्ठानों से जुड़ा है।</li>
                         <li><strong>प्रेतशिला हिल और ब्रह्मयोनि हिल:</strong> प्रेतशिला हिल पूर्वजों के rites के लिए, ब्रह्मयोनि हिल बौद्ध महत्व के लिए उल्लेखनीय है।</li>
-                        <li><strong>बौद्ध तीर्थ स्थल:</strong>महाबोधि मंदिर परिसर: 26 जून 2002 से यूनेस्को विश्व धरोहर स्थल। वह स्थान जहाँ सिद्धार्थ गौतम को ज्ञान प्राप्त हुआ। अशोक के तीसरे शताब्दी ईसा पूर्व के निर्माण से उत्पन्न।</li>
+                        <li><strong>बौद्ध तीर्थ स्थल:</strong>महाबोधि मंदिर परिसर: 26 जून 2002 से यूनेस्को विश्व धरोहर स्थल। वह स्थान जहाँ सिद्धार्थ Gautam को ज्ञान प्राप्त हुआ। अशोक के तीसरे शताब्दी ईसा पूर्व के निर्माण से उत्पन्न।</li>
                         <li><strong>बोधिवृक्ष और मुख्य तीर्थ स्थल:</strong> मूल अंजीर के पेड़ का सीधा वंशज जिसके नीचे बुद्ध ने ध्यान किया। वज्रासन (हीरे का सिंहासन)।</li>
                         <li><strong>डुंगेश्वरी गुफाएं (महाकाल गुफाएं) और महान बुद्ध प्रतिमा:</strong> बुद्ध ने ज्ञान प्राप्ति से पहले छह साल तक अत्यधिक तपस्या की। 19.5 मीटर (61 फुट) ऊंची महान बुद्ध प्रतिमा।</li>
                         <li><strong>बराबर गुफाएं और सुजाता स्तूप:</strong> भारत की सबसे पुरानी चट्टानों को काटकर बनाई गई गुफाएं (तीसरी शताब्दी ईसा पूर्व)। सुजाता स्तूप उस गांव को चिह्नित करता है जहाँ सुजाता ने भूखे बुद्ध को चावल का हलवा चढ़ाया था।</li>
@@ -1307,7 +1312,7 @@ text-center
                         <li>गया जी को 18 मई, 2025 को इसके गहरे आध्यात्मिक विरासत का सम्मान करने के लिए आधिकारिक तौर पर 'गया जी' का नाम दिया गया। यह नामकरण शहर की पहचान को उसकी धार्मिक और सांस्कृतिक जड़ों के साथ और अधिक संरेखित करता है।</li>
                         <li>पौराणिक उत्पत्ति के अनुसार, राक्षस गयासुर के पवित्र शरीर को भगवान विष्णु द्वारा वश में करने के बाद शहर को घेरने वाली चट्टानी पहाड़ियों में बदल दिया गया था। यही कारण है कि शहर और आसपास की पहाड़ियों का नाम गयासुर के नाम पर पड़ा, जिससे शहर की भौगोलिक पहचान में आध्यात्मिक महत्व गहराई से जुड़ गया।</li>
                         <li>विष्णुपद मंदिर में केंद्रीय हिंदू अनुष्ठान पिंडदान है, जिसमें पूर्वजों को पिंड (oblations) अर्पित किए जाते हैं। ऐसा माना जाता है कि यह अनुष्ठान आत्माओं को नरक से बचने और स्वर्ग तक पहुंचने में मदद करता है, जिससे यह हिंदू तीर्थयात्रियों के लिए एक अत्यंत महत्वपूर्ण प्रथा बन जाती है।</li>
-                        <li>महाबोधि मंदिर परिसर को 26 जून, 2002 को यूनेस्को विश्व धरोहर स्थल के रूप में मान्यता दी गई थी क्योंकि यह वह स्थान है जहाँ सिद्धार्थ गौतम को ज्ञान प्राप्त हुआ था। यह प्रारंभिक ईंटों से निर्मित बौद्ध तीर्थस्थलों में से एक है जो अभी भी खड़ा है, जो इसके अद्वितीय ऐतिहासिक और धार्मिक महत्व को दर्शाता है।</li>
+                        <li>महाबोधि मंदिर परिसर को 26 जून, 2002 को यूनेस्को विश्व धरोहर स्थल के रूप में मान्यता दी गई थी क्योंकि यह वह स्थान है जहाँ सिद्धार्थ Gautam को ज्ञान प्राप्त हुआ था। यह प्रारंभिक ईंटों से निर्मित बौद्ध तीर्थस्थलों में से एक है जो अभी भी खड़ा है, जो इसके अद्वितीय ऐतिहासिक और धार्मिक महत्व को दर्शाता है।</li>
                         <li>पितृ पक्ष मेला 16 दिवसीय हिंदू त्योहार है जो सितंबर-अक्टूबर में होता है और पूर्वजों की पूजा के लिए समर्पित है। यह फल्गु नदी के तट पर पिंडदान अनुष्ठान करने के लिए लाखों भक्तों को आकर्षित करता है, जो पूर्वजों को श्रद्धांजलि अर्पित करने का एक महत्वपूर्ण समय है।</li>
                         <li>फल्गु नदी के बारे में अनूठा विश्वास यह है कि सीता के श्राप के कारण यह ज्यादातर भूमिगत बहती है, और इसका पानी केवल खुदाई करने पर ही सतह पर आता है। यह रहस्यमय तत्व पूर्वजों के अनुष्ठानों के लिए नदी की गहरी पवित्रता को बढ़ाता है और शहर के आध्यात्मिक परिदृश्य में एक अनोखी परत जोड़ता है।</li>
                         <li>गया जी के परिवहन नेटवर्क के तीन प्रमुख घटक गया अंतर्राष्ट्रीय हवाई अड्डा, गया जंक्शन रेलवे स्टेशन और राष्ट्रीय राजमार्ग (जैसे NH-19, NH-82, NH-83) हैं। ये शहर को हवाई, रेल और सड़क मार्ग से अच्छी तरह से जोड़ते हैं, जिससे तीर्थयात्रियों और व्यापार के लिए पहुंच सुनिश्चित होती है।</li>
@@ -1338,14 +1343,14 @@ text-center
                         <li><strong>अहिल्याबाई होल्कर:</strong> मराठा राजवंश की रानी जिन्होंने 1787 में वर्तमान विष्णुपद मंदिर का पुनर्निर्माण करवाया था।</li>
                         <li><strong>अमृतसर-दिल्ली-कोलकाता औद्योगिक गलियारा:</strong> भारत सरकार की एक पहल जिसका उद्देश्य औद्योगिक विकास को बढ़ावा देना है, जिसमें गया जी को शामिल किया गया है।</li>
                         <li><strong>बरहबर गुफाएं:</strong> गया जी के पास भारत की सबसे पुरानी चट्टानों को काटकर बनाई गई गुफाएं (तीसरी शताब्दी ईसा पूर्व), जिनमें अशोक के शिलालेख हैं और यह आजीविका तपस्वियों द्वारा उपयोग की जाती थीं।</li>
-                        <li><strong>बोधगया:</strong> गया जी का एक क्षेत्र जहाँ सिद्धार्थ गौतम को ज्ञान प्राप्त हुआ था; महाबोधि मंदिर परिसर और बोधिवृक्ष का घर।</li>
+                        <li><strong>बोधगया:</strong> गया जी का एक क्षेत्र जहाँ सिद्धार्थ Gautam को ज्ञान प्राप्त हुआ था; महाबोधि मंदिर परिसर और बोधिवृक्ष का घर।</li>
                         <li><strong>बोधिवृक्ष:</strong> वह पवित्र अंजीर का पेड़ जिसके नीचे बुद्ध को ज्ञान प्राप्त हुआ था; महाबोधि मंदिर के पीछे स्थित है।</li>
                         <li><strong>ब्रह्मयोनि हिल:</strong> गया जी की एक पवित्र पहाड़ी जहाँ बुद्ध ने आदित्यपरियाय सुत्त का प्रचार किया था।</li>
                         <li><strong>केंद्रीय दक्षिण बिहार विश्वविद्यालय:</strong> गया जी में 2010 में स्थापित एक प्रतिष्ठित शैक्षणिक संस्थान।</li>
                         <li><strong>छठ पूजा:</strong> सूर्य देव को समर्पित एक प्राचीन हिंदू त्योहार, विशेष रूप से बिहार में मनाया जाता है।</li>
                         <li><strong>सी.आर. दास:</strong> एक भारतीय स्वतंत्रता सेनानी जिन्होंने 1922 में गया में 37वें कांग्रेस सत्र की अध्यक्षता की थी।</li>
                         <li><strong>दशरथ:</strong> भगवान राम के पिता, जिनके लिए उन्होंने रामायण के अनुसार गया जी में पिंडदान किया था।</li>
-                        <li><strong>धर्मशिला:</strong> विष्णुपद मंदिर में भगवान विष्णु के पदचिह्न को दर्शाने वाला एक पवित्र पत्थर।</li>
+                        <li><strong>धर्मशिला:</strong> विष्णुपद मंदिर में भगवान Vishnu के पदचिह्न को दर्शाने वाला एक पवित्र पत्थर।</li>
                         <li><strong>डुंगेश्वरी गुफाएं (महाकाल गुफाएं):</strong> बोधगया के बाहर की गुफाएं जहाँ बुद्ध ने ज्ञान प्राप्त करने से पहले छह साल तक तपस्या की थी।</li>
                         <li><strong>फल्गु नदी:</strong> गया जी से होकर बहने वाली एक पवित्र नदी, जो पिंडदान अनुष्ठानों के लिए महत्वपूर्ण है और सीता के श्राप के कारण भूमिगत बहती है।</li>
                         <li><strong>गयासुर:</strong> एक राक्षस जिसकी पौराणिक कथा के अनुसार गया जी का नाम पड़ा; उसके पवित्र शरीर को शहर को घेरने वाली पहाड़ियों में बदल दिया गया।</li>
@@ -1388,7 +1393,7 @@ text-center
                         <li><strong>यूनेस्को विश्व धरोहर स्थल:</strong> बोधगया में महाबोधि मंदिर परिसर को यह मान्यता मिली हुई है।</li>
                         <li><strong>वज्रासन (हीरे का सिंहासन):</strong> बोधिवृक्ष के पास का एक पवित्र स्थान जहाँ बुद्ध को ज्ञान प्राप्त हुआ था।</li>
                         <li><strong>वेसाक (बुद्ध पूर्णिमा):</strong> बुद्ध के जन्म, ज्ञान और निधन को चिह्नित करने वाला सबसे महत्वपूर्ण बौद्ध त्योहार।</li>
-                        <li><strong>विष्णुपद मंदिर:</strong> फल्गु नदी पर 18वीं शताब्दी का मंदिर, भगवान विष्णु के पदचिह्न को चिह्नित करता है और पिंडदान का केंद्र है।</li>
+                        <li><strong>विष्णुपद मंदिर:</strong> फल्गु नदी पर 18वीं शताब्दी का मंदिर, भगवान Vishnu के पदचिह्न को चिह्नित करता है और पिंडदान का केंद्र है।</li>
                     </ul>
                 </div>
             </div>
@@ -1434,7 +1439,7 @@ text-center
                         4. गया शहर में पितृ दान अनुष्ठानों का क्या महत्व है?
                     </summary>
                     <p class="mt-2 text-gray-700 leading-relaxed">
-                        गया शहर हिंदू धर्म में पितृ दान अनुष्ठानों के लिए अत्यंत महत्वपूर्ण है। यह माना जाता है कि यहाँ फल्गु नदी के किनारे अपने दिवंगत पूर्वजों के लिए पिंड दान करने से उनकी आत्माओं को मोक्ष प्राप्त होता है। विष्णुपद मंदिर, जहाँ भगवान विष्णु के पदचिह्न माने जाते हैं, इन अनुष्ठानों का एक केंद्रीय बिंदु है।
+                        गया शहर हिंदू धर्म में पितृ दान अनुष्ठानों के लिए अत्यंत महत्वपूर्ण है। यह माना जाता है कि यहाँ फल्गु नदी के किनारे अपने दिवंगत पूर्वजों के लिए पिंड दान करने से उनकी आत्माओं को मोक्ष प्राप्त होता है। विष्णुपद मंदिर, जहाँ भगवान Vishnu के पदचिह्न माने जाते हैं, इन अनुष्ठानों का एक केंद्रीय बिंदु है।
                     </p>
                 </details>
                 <details class="group border-b pb-4">
