--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Our facilities and services are comparable to those found in top hotel venues, m
 </p>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Listen to Our Story</h3>
-                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%AC%E0%A5%8B%E0%A4%A4%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A7%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
+                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%AC%E0%A5%8B%E0%A4%A4%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A4%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
             </div>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Gaya & Bodhgaya: An Exploration</h3>
@@ -292,12 +292,21 @@ We look forward to welcoming you!
 
         <section class="card">
             <h2 class="section-title">Project Mind Maps</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f8e8e79f3b9f5b3287956e12c4ec436a220ea391/NotebookLM%20Mind%20Map%20(11).png?raw=true" alt="NotebookLM Mind Map 1" class="rounded-lg shadow-lg">
                 </div>
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/d51260fc203b82b4bf0ed626fec4f7c9ccac0935/NotebookLM%20Mind%20Map%20(2).png?raw=true" alt="NotebookLM Mind Map 2" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/7725abba5d8685ce3ff8afcb81f0f81f061e5801/NotebookLM%20Mind%20Map%20(7).png?raw=true" alt="NotebookLM Mind Map 3" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/7725abba5d8685ce3ff8afcb81f0f81f061e5801/NotebookLM%20Mind%20Map%20(8).png?raw=true" alt="NotebookLM Mind Map 4" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/7725abba5d8685ce3ff8afcb81f0f81f061e5801/NotebookLM%20Mind%20Map%20(9).png?raw=true" alt="NotebookLM Mind Map 5" class="rounded-lg shadow-lg">
                 </div>
             </div>
         </section>
@@ -1276,7 +1285,7 @@ text-center
                         <li><strong>शैक्षिक केंद्र और पहल:</strong> दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, आईआईएम बोधगया, अनुग्रह नारायण मगध मेडिकल कॉलेज और अस्पताल सहित उल्लेखनीय संस्थान। उच्च साक्षरता दर।</li>
                         <li><strong>आधुनिक विकास और पर्यावरणीय दृष्टिकोण:</strong>नामकरण: मई 2025 में आधिकारिक तौर पर "गया जी" नाम दिया गया।</li>
                         <li><strong>बुनियादी ढांचा पहल:</strong> 1,670 एकड़ विनिर्माण क्लस्टर, अमृतसर-दिल्ली-कोलकाता औद्योगिक गलियारे में शामिल।</li>
-                        <li><strong>जलवायु:</strong> आर्द्र उपोष्णकटिबंधीय जलवायु (गर्म ग्रीष्मकाल, मानसून, ठंडा शीतकाल)।</li>
+                        <li><strong>जलवायु:</strong> आर्द्र उपोष्णकटबंधीय जलवायु (गर्म ग्रीष्मकाल, मानसून, ठंडा शीतकाल)।</li>
                         <li><strong>पर्यावरण प्रयास:</strong> स्वच्छ वायु सर्वेक्षण 2024 में "राष्ट्रीय स्वच्छ वायु शहरों" में 8वां स्थान।</li>
                     </ul>
                     <p><strong>अध्ययन के लिए मुख्य प्रश्न:</strong></p>
@@ -1364,7 +1373,7 @@ text-center
                         <li><strong>काग्यू मोनलम चेनमो:</strong> बोधगया में एक प्रमुख तिब्बती बौद्ध प्रार्थना त्योहार।</li>
                         <li><strong>खाजा:</strong> एक कुरकुरा, परतदार पेस्ट्री, गया जी की एक लोकप्रिय स्थानीय मिठाई।</li>
                         <li><strong>किकटा साम्राज्य:</strong> ऋग्वेदिक काल का एक साम्राज्य जिससे गया जी की उत्पत्ति का पता चलता है।</li>
-                        <li><strong>कोप्पेन वर्गीकरण (Cwa):</strong> गया जी की आर्द्र उपोष्णकटिबंधीय जलवायु को दर्शाता है।</li>
+                        <li><strong>कोप्पेन वर्गीकरण (Cwa):</strong> गया जी की आर्द्र उपोष्णकटबंधीय जलवायु को दर्शाता है।</li>
                         <li><strong>लाई:</strong> चावल और गुड़ से बनी एक पारंपरिक मिठाई, गया जी के छोटे पैमाने के उद्योगों में से एक।</li>
                         <li><strong>लिट्टी चोखा:</strong> भरवां पूरे गेहूं के आटे की गेंदें जो मसले हुए सब्जियों (चोखा) के साथ परोसी जाती हैं, बिहार का एक प्रतिष्ठित व्यंजन।</li>
                         <li><strong>मगध विश्वविद्यालय:</strong> गया जी में एक राज्य विश्वविद्यालय।</li>
