--- a/index.html
+++ b/index.html
@@ -308,6 +308,9 @@ We look forward to welcoming you!
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/7725abba5d8685ce3ff8afcb81f0f81f061e5801/NotebookLM%20Mind%20Map%20(9).png?raw=true" alt="NotebookLM Mind Map 5" class="rounded-lg shadow-lg">
                 </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/4addb313696cb99997a673b346f47855d2d5f0d7/NotebookLM%20Mind%20Map%20(12).png?raw=true" alt="NotebookLM Mind Map 6" class="rounded-lg shadow-lg">
+                </div>
             </div>
         </section>
 
@@ -683,7 +686,7 @@ by user" class="w-full h-auto object-cover">
     <section class="card">
         <h2 class="section-title">Gaya Ji: A Confluence of Faith and History</h2>
         <div class="flex justify-center items-center flex-col">
-            <video src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/raw/cd9ea05397eba1ccda41feb0c5065fcf39119726/%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%9C%E0%A5%80__%E0%A4%86%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%87%E0%A4%A4%E0%A4%BF%E0%A4%B9%E0%A4%BE%E0%A4%B8_%E0%A4%95%E0%A4%BE_%E0%A4%B8%E0%A4%82%E0%A4%97%E0%A4%AE.mp4" controls class="w-full rounded-lg shadow-md" style="aspect-ratio: 16/9;"></video>
+            <video src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/raw/cd9ea05397eba1ccda41feb0c5065fcf39119726/%E0%A4%97%E0%A4%AY%E0%A4%BE_%E0%A4%9C%E0%A5%80__%E0%A4%86%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%87%E0%A4%A4%E0%A4%BF%E0%A4%B9%E0%A4%BE%E0%A4%B8_%E0%A4%95%E0%A4%BE_%E0%A4%B8%E0%A4%82%E0%A4%97%E0%A4%AE.mp4" controls class="w-full rounded-lg shadow-md" style="aspect-ratio: 16/9;"></video>
         </div>
     </section>
 
@@ -1130,7 +1133,7 @@ text-center
                     <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी में कौन से प्रमुख हिंदू तीर्थ स्थल और अनुष्ठान हैं?</p>
                     <p>उत्तर: गया जी हिंदुओं के लिए एक प्रमुख तीर्थ स्थल है, विशेष रूप से पितृपक्ष मेला के दौरान। यहाँ के मुख्य स्थल हैं:<br>
                     <strong>विष्णुपद मंदिर:</strong> 18वीं शताब्दी का यह मंदिर फल्गु नदी पर भगवान विष्णु के पदचिह्न (धर्मशिला) को चिह्नित करता है। यह 40 सेंटीमीटर लंबे पदचिह्न को दर्शाता है और पिण्डदान अनुष्ठान का केंद्र है, जो पूर्वजों को श्रद्धांजलि देने के लिए किया जाता है ताकि आत्माओं को मोक्ष मिल सके।<br>
-                    <strong>पिण्डदान और फल्गु नदी:</strong> यह गया जी में केंद्रीय हिंदू अनुष्ठान है, जहाँ भक्त फल्गु नदी के तट पर पूर्वजों को पिंड (पुष्पांजलि) अर्पित करते हैं, जिसे "पितृ ऋण" चुकाने के लिए माना जाता है। किंवदंती है कि राम, सीता और लक्ष्मण ने दशरथ के लिए यहाँ पिण्डदान किया था।<br>
+                    <strong>पिण्डदान और फल्गु नदी:</strong> यह गया जी में केंद्रीय हिंदू अनुष्ठान है, जहाँ भक्त फल्गु नदी के तट पर पूर्वजों को पिंड (पुष्पांजलि) अर्पित करते हैं, जिसे "पितृ ऋण" चुकाने के लिए माना जाता है। किंवंती है कि राम, सीता और लक्ष्मण ने दशरथ के लिए यहाँ पिण्डदान किया था।<br>
                     <strong>रामशिला हिल और अक्षयवट:</strong> रामशिला हिल एक पवित्र पहाड़ी है जहाँ माना जाता है कि भगवान राम ने पैतृक अनुष्ठान किए थे। पास में अक्षयवट, एक अमर बरगद का पेड़ है, जहाँ पिण्डदान भी किया जाता है, जो शाश्वत आशीर्वाद सुनिश्चित करता है।<br>
                     <strong>मंगला गौरी मंदिर:</strong> यह एक पहाड़ी पर स्थित शक्ति पीठ है जो देवी सती (मंगला गौरी का अवतार) को समर्पित है, जो 15वीं शताब्दी का एक महत्वपूर्ण मंदिर है।</p>
                 </div>
@@ -1282,7 +1285,7 @@ text-center
                         <li><strong>आर्थिक चालक (जिला):</strong>प्रशासन और शासन: गया जिला और मगध डिवीजन का प्रशासनिक मुख्यालय।</li>
                         <li><strong>मजबूत परिवहन नेटवर्क:</strong> हवाई (गया अंतर्राष्ट्रीय हवाई अड्डा), रेल (गया जंक्शन), और सड़क (NH-19, NH-82, NH-83) से अच्छी तरह से जुड़ा हुआ।</li>
                         <li><strong>प्रमुख आर्थिक गतिविधियाँ:</strong> कृषि (धान, गेहूं, मक्का), पशुधन। छोटे पैमाने के उद्योग (अगरबत्ती, तिलकुट, लाई, हथकरघा वस्त्र, पत्थर की नक्काशी)। धार्मिक पर्यटन एक प्रमुख सेवा क्षेत्र है।</li>
-                        <li><strong>शैक्षिक केंद्र और पहल:</strong> दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, आईआईएम बोधगया, अनुग्रह नारायण मगध मेडिकल कॉलेज और अस्पताल सहित उल्लेखनीय संस्थान। उच्च साक्षरता दर।</li>
+                        <li><strong>शैक्षिक केंद्र और पहल:</strong> दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, आईआईएम बोधगया, अनुग्रह नारायण मगध मेडिकल College और अस्पताल सहित उल्लेखनीय संस्थान। उच्च साक्षरता दर।</li>
                         <li><strong>आधुनिक विकास और पर्यावरणीय दृष्टिकोण:</strong>नामकरण: मई 2025 में आधिकारिक तौर पर "गया जी" नाम दिया गया।</li>
                         <li><strong>बुनियादी ढांचा पहल:</strong> 1,670 एकड़ विनिर्माण क्लस्टर, अमृतसर-दिल्ली-कोलकाता औद्योगिक गलियारे में शामिल।</li>
                         <li><strong>जलवायु:</strong> आर्द्र उपोष्णकटबंधीय जलवायु (गर्म ग्रीष्मकाल, मानसून, ठंडा शीतकाल)।</li>
@@ -1347,7 +1350,7 @@ text-center
                     <ul class="list-disc list-inside ml-4 space-y-2">
                         <li><strong>अक्षयवट:</strong> गया जी में एक अमर बरगद का पेड़ जहाँ पिंडदान अनुष्ठान भी किया जाता है, जिसके बारे में माना जाता है कि यह शाश्वत आशीर्वाद सुनिश्चित करता है।</li>
                         <li><strong>अगरबत्ती:</strong> एक धूप की छड़ी, गया जी के छोटे पैमाने के उद्योगों में से एक।</li>
-                        <li><strong>अनुग्रह नारायण मगध मेडिकल कॉलेज और अस्पताल:</strong> गया जी में एक प्रमुख चिकित्सा शैक्षणिक संस्थान।</li>
+                        <li><strong>अनुग्रह नारायण मगध मेडिकल College और अस्पताल:</strong> गया जी में एक प्रमुख चिकित्सा शैक्षणिक संस्थान।</li>
                         <li><strong>आदित्यपरियाय सुत्त:</strong> एक बौद्ध सूत्र जिसे बुद्ध ने ब्रह्मयोनि हिल पर प्रचारित किया था।</li>
                         <li><strong>अहिल्याबाई होल्कर:</strong> मराठा राजवंश की रानी जिन्होंने 1787 में वर्तमान विष्णुपद मंदिर का पुनर्निर्माण करवाया था।</li>
                         <li><strong>अमृतसर-दिल्ली-कोलकाता औद्योगिक गलियारा:</strong> भारत सरकार की एक पहल जिसका उद्देश्य औद्योगिक विकास को बढ़ावा देना है, जिसमें गया जी को शामिल किया गया है।</li>
